Fix width on mobile

--- a/src/style/_page.scss
+++ b/src/style/_page.scss
@@ -1,5 +1,5 @@
 .cocktails {
-  max-width: 992px;
+  max-width: 90%;
   text-align: center;
   margin: auto;
   @media (width > 991px) {
