--- a/src/style/style.css
+++ b/src/style/style.css
@@ -38,7 +38,7 @@
   }
 }
 .cocktails {
-  max-width: 992px;
+  max-width: 90%;
   text-align: center;
   margin: auto;
 }
